Mindre felrättningar och uppsnyggningar. Lade till info om satellit nedlänk i 10m bandet. Lade till info om fyrar inom IBP.

--- a/body-hf.tex
+++ b/body-hf.tex
@@ -4,18 +4,21 @@
 
 \begin{itemize}
 \item QRP: Aktivitetscentrum för låg effek ($<$5W), svaga signaler förekommer, visa stor hänsyn för detta!
-\item QRS: Aktivitetscenter för långsam CW
-\item QRSS: Extremt långsam CW med dator
-\item DV: Digital Voice
-\item Image: Bildmoder exempelvis SSTV och Fax som ryms inom den specificerade max bandbredd
+\item QRS: Aktivitetscenter för långsam CW.
+\item QRSS: Extremt långsam CW med dator.
+\item DV: Digital Voice.
+\item Image: Bildmoder exempelvis SSTV och Fax som ryms inom den specificerade maximala bandbredden.
 \item Vid SSB-telefoni används LSB på frekvenser under 10 MHz och USB på frekvenser över 10 MHz.
-\item Lägsta acceptabla inställda frekvens för LSB är 3 kHz över under bandkant!
+\item Lägsta acceptabla inställda frekvens för LSB är 3 kHz över under bandkant! 
 \item Högsta acceptable inställda frekvens för USB är 3 kHz under övre bandkant!
+\item IBP är International Beacon Project. Fyrarna sänder med 3 min intervaller och används för att studera utbredningen av radiosignaler globalt. Fyrarna sänder anrop och fyra 1 s toner. Anropet och första tonen sänds med 100W, därefter sänds tonerna med 10W, 1W samt 100mW.
 \end{itemize}
 
-Vid AM (A3J) skall hänsyn tas så att störningar på annan trafik ej förekommer med de sidband som då uppstår, det gäller då både övre och undre sidbandet.
-
-Ingen som helst sändning är tillåtet inom fyrsegmenten. Detta skall respekteras. Lyssna gärna på nödfrekvenserna men används dem icke, om det inte är du som svarar på ett nödsamtal! Undvik QSO allt för nära dessa också.
+\begin{itemize}
+\item[---] Vid AM (A3J) skall hänsyn tas så att störningar på annan trafik ej fö\-re\-kom\-mer med de sidband som då uppstår, det gäller då både övre och undre sidbandet.
+\item[---] Ingen som helst sändning är tillåtet inom fyrsegmenten. Detta skall respekteras. Lyssna gärna på nödfrekvenserna men används dem icke, om det inte är du som svarar på ett nödsamtal! Undvik QSO allt för nära dessa också.
+\item[---] Var särskilt uppmärksam på satellit nerlänksfrekvenser på 10m-bandet. I detta segment skall endast lyssning ske. Ingen sändning är tillåten här eller i skyddssegmentet strax ovanför satellitsegmentet. Tänk på att satelliters frekvens kan dopplerskiftas uppåt en hel del när de rör sig mot mottagaren.
+\end{itemize}
 
 \begin{landscape}
 
@@ -45,6 +48,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 472 & 479 & 200 & CW, QRSS, Digi & OBS! Högsta utstrålad effekt 1W EIRP \\ \hline
 \end{tabular}
 
+\subsubsection{Bandplan 160 m, 1810--2000 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 1 810 & 1 838 & 200  & CW         & Exklusivt för CW. Interkontinental trafik har prio. \\ \hline
@@ -149,24 +153,24 @@ Alla frekvenser i kHz, bandbredder i Hz.
 \subsubsection{Bandplan 10 m, 28000-29700 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
-28 000 & 28 070 & 200  & CW         & Exklusivt CW, QRS 28 055, CW QRP 28 060                   \\ \hline
-28 070 & 28 190 & 500  & Smalband   & PSK 28 120.150, Auto Digimoder inom 28 120--150           \\ \hline
-28 190 & 28 199 & 200  & Fyrar IBP  & Regionala fyrar med tidsdelning                           \\ \hline
-28 199 & 28 201 & 200  & Fyrar IBP  & IBP fyrnät                                                \\ \hline
-28 201 & 28 225 & 200  & Fyrar IBP  & kontinuerligt sändande fyrar                              \\ \hline
-28 225 & 28 300 & 2700 & Alla moder & Övriga fyrar                                              \\ \hline
-28 300 & 28 320 & 2700 & Alla moder & Digimoder och Automatiska Digimoder                       \\ \hline
-28 320 & 29 100 & 2700 & Alla moder & DV 28 330 kHz, SSB QRP 28 360 kHz                         \\
-       &        &      &            & Image 28 680 kHz                                          \\ \hline
-29 100 & 29 200 & 6000 & Alla moder & FM simplex, 10 kHz kanaler                                \\
-       &        &      &            & Maximalt ±2.5 kHz dev., max 2.5 kHz mod.frek.             \\ \hline
-29 200 & 29 300 & 6000 & Alla moder & Digimoder och Automatiska Digimoder                       \\ \hline
-29 300 & 29 510 & 6000 & Satellit   & Nerlänk fr. satellit. INGEN SÄNDNING I SEGMENTET          \\ \hline
-29 510 & 29 520 & 6000 & Skydd      & Skyddsfrekvens för satelliter. INGEN SÄNDNING I SEGMENTET \\ \hline
-29 520 & 29 590 & 6000 & Alla moder & FM Repeater in RH1–-RH8, 100 kHz duplex, 2.5 kHz NBFM     \\ \hline
-29 600 & 29 620 & 6000 & Alla moder & FM simplex, anrop 29 600                                  \\
-       &        &      &            & FM simplex repeater 29 610                                \\ \hline
-29 620 & 29 700 & 6000 & Alla moder & FM Repeater ut RH1–-RH8, 100 kHz duplex                   \\ \hline
+28 000 & 28 070 & 200  & CW         & Exklusivt CW, QRS 28 055, CW QRP 28 060                \\ \hline
+28 070 & 28 190 & 500  & Smalband   & PSK 28 120.150, Auto Digimoder inom 28 120--150        \\ \hline
+28 190 & 28 199 & 200  & Fyrar IBP  & Regionala fyrar med tidsdelning                        \\ \hline
+28 199 & 28 201 & 200  & Fyrar IBP  & IBP fyrnät                                             \\ \hline
+28 201 & 28 225 & 200  & Fyrar IBP  & kontinuerligt sändande fyrar                           \\ \hline
+28 225 & 28 300 & 2700 & Alla moder & Övriga fyrar                                           \\ \hline
+28 300 & 28 320 & 2700 & Alla moder & Digimoder och Automatiska Digimoder                    \\ \hline
+28 320 & 29 100 & 2700 & Alla moder & DV 28 330 kHz, SSB QRP 28 360 kHz                      \\
+       &        &      &            & Image 28 680 kHz                                       \\ \hline
+29 100 & 29 200 & 6000 & Alla moder & FM simplex, 10 kHz kanaler                             \\
+       &        &      &            & Maximalt ±2.5 kHz dev., max 2.5 kHz mod.frek.          \\ \hline
+29 200 & 29 300 & 6000 & Alla moder & Digimoder och Automatiska Digimoder                    \\ \hline
+29 300 & 29 510 & 6000 & Satellit   & Nerlänk fr. satellit. EJ SÄNDNING I SEGMENTET          \\ \hline
+29 510 & 29 520 & 6000 & Skydd      & Skyddsfrekvens för satelliter. EJ SÄNDNING I SEGMENTET \\ \hline
+29 520 & 29 590 & 6000 & Alla moder & FM Repeater in RH1--8, 100 kHz duplex, 2.5 kHz NBFM    \\ \hline
+29 600 & 29 620 & 6000 & Alla moder & FM simplex, anrop 29 600                               \\
+       &        &      &            & FM simplex repeater 29 610                             \\ \hline
+29 620 & 29 700 & 6000 & Alla moder & FM Repeater ut RH1--8, 100 kHz duplex                  \\ \hline
 \end{tabular}
 
 \clearpage
