--- a/body-hf.tex
+++ b/body-hf.tex
@@ -20,6 +20,35 @@
 \item[---] Var särskilt uppmärksam på satellit nerlänksfrekvenser på 10m-bandet. I detta segment skall endast lyssning ske. Ingen sändning är tillåten här eller i skyddssegmentet strax ovanför satellitsegmentet. Tänk på att satelliters frekvens kan dopplerskiftas uppåt en hel del när de rör sig mot mottagaren.
 \end{itemize}
 
+\subsection{Fyrar}
+
+Det finns flera olika typer av fyrar men för HF är IBP (International Beacon Project) intressant eftersom det ger operatören möjlighet att utröna hur utbredningen ser ut för stunden genom att lyssna efter fyrar. Tabellen nedan visar anropssignaler och första sändningsslotten som fyren sänder, dvs SCHED för olika fyrar och frekvenser.
+
+Fyrarna har gemensam hårdvara och synkroniseras mot tidsreferens. Fyrar kan vara offline av olika skäl, kontrollera mot IBP:s hemsida om du inte hör en fyr du brukar höra, den kan vara off line.
+
+\begin{tabular}{llrrrrr}
+\hline
+Signal & QTH            & 14 100 & 18 110 & 21 150 & 24 930 & 28 200 \\ \hline
+4U1UN  & United Nations & 00:00  & 00:10  & 00:20  & 00:30  & 00:40  \\ 
+VE8AT  & Canada         & 00:10  & 00:20  & 00:30  & 00:40  & 00:50  \\
+W6WX   & United States  & 00:20  & 00:30  & 00:40  & 00:50  & 01:00  \\
+KH6RS  & Hawaii         & 00:30  & 00:40  & 00:50  & 01:00  & 01:10  \\
+ZL6B   & New Zealand    & 00:40  & 00:50  & 01:00  & 01:10  & 01:20  \\
+VK6RBP & Australia      & 00:50  & 01:00  & 01:10  & 01:20  & 01:30  \\
+JA2IGY & Japan          & 01:00  & 01:10  & 01:20  & 01:30  & 01:40  \\
+RR9O   & Russia         & 01:10  & 01:20  & 01:30  & 01:40  & 01:50  \\
+VR2B   & Hong Kong      & 01:20  & 01:30  & 01:40  & 01:50  & 02:00  \\
+4S7B   & Sri Lanka      & 01:30  & 01:40  & 01:50  & 02:00  & 02:10  \\
+ZS6DN  & South Africa   & 01:40  & 01:50  & 02:00  & 02:10  & 02:20  \\
+5Z4B   & Kenya          & 01:50  & 02:00  & 02:10  & 02:20  & 02:30  \\
+4X6TU  & Israel         & 02:00  & 02:10  & 02:20  & 02:30  & 02:40  \\
+OH2B   & Finland        & 02:10  & 02:20  & 02:30  & 02:40  & 02:50  \\
+CS3B   & Madeira        & 02:20  & 02:30  & 02:40  & 02:50  & 00:00  \\
+LU4AA  & Argentina      & 02:30  & 02:40  & 02:50  & 00:00  & 00:10  \\
+OA4B   & Peru           & 02:40  & 02:50  & 00:00  & 00:10  & 00:20  \\
+YV5B   & Venezuela      & 02:50  & 00:00  & 00:10  & 00:20  & 00:30  \\
+\end{tabular}
+
 \begin{landscape}
 
 \section{Frekvenser Amatörradio LF/MF/HF}
