Små rättningar och justeringar

--- a/body-hf.tex
+++ b/body-hf.tex
@@ -1,34 +1,43 @@
 \clearpage
 
 \section{Trafik- och tumregler HF}
+\subsection{Kort sammanfattning av reglemente}
+
+OBS! Detta är inte fullständigt radioreglemente naturligtvis utan endast sammanfattning av några viktiga punkter.
+
+\subsubsection{Begrepp i bandplanerna}
 
 \begin{itemize}
-\item QRP: Aktivitetscentrum för låg effek ($<$5W), svaga signaler förekommer, visa stor hänsyn för detta!
+\item QRP: Aktivitetscentrum för låg effekt ($<$5W), svaga signaler förekommer, visa hänsyn.
 \item QRS: Aktivitetscenter för långsam CW.
 \item QRSS: Extremt långsam CW med dator.
 \item DV: Digital Voice.
 \item Image: Bildmoder exempelvis SSTV och Fax som ryms inom den specificerade maximala bandbredden.
+\end{itemize}
+
+\subsubsection{Trafikregler och tumregler}
+
+\begin{itemize}
 \item Vid SSB-telefoni används LSB på frekvenser under 10 MHz och USB på frekvenser över 10 MHz.
 \item Lägsta acceptabla inställda frekvens för LSB är 3 kHz över under bandkant! 
 \item Högsta acceptable inställda frekvens för USB är 3 kHz under övre bandkant!
 \item IBP är International Beacon Project. Fyrarna sänder med 3 min intervaller och används för att studera utbredningen av radiosignaler globalt. Fyrarna sänder anrop och fyra 1 s toner. Anropet och första tonen sänds med 100W, därefter sänds tonerna med 10W, 1W samt 100mW.
-\end{itemize}
-
-\begin{itemize}
-\item[---] Vid AM (A3J) skall hänsyn tas så att störningar på annan trafik ej fö\-re\-kom\-mer med de sidband som då uppstår, det gäller då både övre och undre sidbandet.
-\item[---] Ingen som helst sändning är tillåtet inom fyrsegmenten. Detta skall respekteras. Lyssna gärna på nödfrekvenserna men används dem icke, om det inte är du som svarar på ett nödsamtal! Undvik QSO allt för nära dessa också.
-\item[---] Var särskilt uppmärksam på satellit nerlänksfrekvenser på 10m-bandet. I detta segment skall endast lyssning ske. Ingen sändning är tillåten här eller i skyddssegmentet strax ovanför satellitsegmentet. Tänk på att satelliters frekvens kan dopplerskiftas uppåt en hel del när de rör sig mot mottagaren.
+\item Vid AM (A3J) skall hänsyn tas så att störningar på annan trafik ej fö\-re\-kom\-mer med de sidband som då uppstår, det gäller då både övre och undre sidbandet.
+\item Ingen som helst sändning är tillåtet inom fyrsegmenten. Detta skall respekteras. Lyssna gärna på nödfrekvenserna men används dem icke, om det inte är du som svarar på ett nödsamtal! Undvik QSO allt för nära dessa också.
+\item Var särskilt uppmärksam på satelliters nerlänksfrekvenser på 10 m-bandet. I detta segment skall endast lyssning ske. Ingen sändning är tillåten här eller i skyddssegmentet strax ovanför satellitsegmentet. Tänk på att satelliters frekvens kan dopplerskiftas uppåt en hel del när de rör sig mot mottagaren.
 \end{itemize}
 
 \subsection{Fyrar}
+
+\subsubsection{IBP---International Beacon Project}
 
 Det finns flera olika typer av fyrar men för HF är IBP (International Beacon Project) intressant eftersom det ger operatören möjlighet att utröna hur utbredningen ser ut för stunden genom att lyssna efter fyrar. Tabellen nedan visar anropssignaler och första sändningsslotten som fyren sänder, dvs SCHED för olika fyrar och frekvenser.
 
 Fyrarna har gemensam hårdvara och synkroniseras mot tidsreferens. Fyrar kan vara offline av olika skäl, kontrollera mot IBP:s hemsida om du inte hör en fyr du brukar höra, den kan vara off line.
 
 \begin{tabular}{llrrrrr}
-\hline
-Signal & QTH            & 14 100 & 18 110 & 21 150 & 24 930 & 28 200 \\ \hline
+\textbf{Signal} & \textbf{QTH} & \textbf{14 100} & \textbf{18 110} & \textbf{21 150} & \textbf{24 930} & \textbf{28 200} \\ \hline
+
 4U1UN  & United Nations & 00:00  & 00:10  & 00:20  & 00:30  & 00:40  \\ 
 VE8AT  & Canada         & 00:10  & 00:20  & 00:30  & 00:40  & 00:50  \\
 W6WX   & United States  & 00:20  & 00:30  & 00:40  & 00:50  & 01:00  \\
