--- a/body-hf.tex
+++ b/body-hf.tex
@@ -210,10 +210,86 @@ Alla frekvenser i kHz, bandbredder i Hz.
        &        &      &            & FM simplex repeater 29 610                             \\ \hline
 29 620 & 29 700 & 6000 & Alla moder & FM Repeater ut RH1--8, 100 kHz duplex                  \\ \hline
 \end{tabular}
-
 \clearpage
 
 \small
+
+\subsection{PTS Bandplan för VLF, 3-30 kHz}
+\begin{longtable}{lll}
+\textbf{Frekvens} & \textbf{Användning}              & \textbf{Anmärkning}             \\ \hline \endhead
+0,009--0,014	 & Radionavigering                 & Sjöfart  \\	 
+0,009--0,014	 & Radionavigering                 & Luftfart \\	 
+0,009--0,01995	 & Militär användning              &          \\
+0,014--0,01995	 & Fast radio                      &          \\
+0,014--0,01995	 & Sjöfartsradio                   &          \\
+0,01995--0,02005 & Standardfrekvens och tidssignal &          \\ 
+\end{longtable}
+
+\subsection{PTS Bandplan för LF, 30-300 kHz}
+\begin{longtable}{lll}
+\textbf{Frekvens} & \textbf{Användning}  & \textbf{Anmärkning}                     \\ \hline \endhead
+0,1176--0,126     & Militär användning   &                                         \\
+0,1176--0,126     & Sjöfartsradio        &                                         \\
+0,129--0,1485     & Militär användning   &                                         \\
+0,129--0,1485     & Sjöfartsradio        &                                         \\
+0,1357--0,1378    & \textbf{Amatörradio} & Undantag från tillståndsplikt (Max 1 W) \\
+0,1485--0,2835    & Rundradio            & GE75                                    \\
+\end{longtable}
+
+\subsection{PTS Bandplan för MF, 300-3000 kHz}
+\begin{longtable}{lll}
+\textbf{Frekvens} & \textbf{Användning}              & \textbf{Anmärkning}             \\ \hline \endhead
+
+0,315--0,6	 & Djurimplantat                   & Undantag från tillståndsplikt             \\
+0,4--0,6	 & RFID                            & Undantag från tillståndsplikt             \\
+0,405--0,415	 & Militär användning              &                                           \\	 
+0,4065--0,4135	 & Radionavigering                 & Sjöfart                                   \\
+0,415--0,435	 & Radionavigering                 & Luftfart GE85M                            \\
+0,415--0,435	 & Militär användning              & GE85M                                     \\
+0,415--0,495	 & Sjöfartsradio                   & GE85M                                     \\
+0,415--0,435	 & Radiofyrar                      & Luftfart	GE85M                          \\
+0,435--0,5265	 & Militär användning              &                                           \\ 
+0,4569--0,4571	 & Lokalisering av nödställda      & Undantag från tillståndsplikt             \\
+0,472--0,479	 & \textbf{Amatörradio}            & Undantag från tillståndsplikt (Max 1 W)   \\
+0,495--0,5265	 & Sjöfartsradio                   &                                           \\
+0,495--0,505	 & Luftfartsradio                  &                                           \\
+0,51775--0,51825 & Sjöfartsradio                   & NAVTEX                                    \\
+0,5265--1,6065	 & Rundradio                       & GE75                                      \\
+1,6065--1,625	 & Militär användning              & GE85M                                     \\
+1,6065--1,625	 & Sjöfartsradio                   & GE85M                                     \\
+1,625--1,635	 & Militär användning              &                                           \\
+1,625--1,635	 & Radiolokalisering               &                                           \\
+1,635--1,8	 & Militär användning              & GE85M                                     \\
+1,635--1,8	 & Sjöfartsradio                   & GE85M                                     \\
+1,8--1,81	 & Militär användning              &                                           \\ 
+1,8--1,81	 & Radiolokalisering               &                                           \\
+1,81--1,85	 & \textbf{Amatörradio}                     & Undantag från tillståndsplikt             \\
+1,85--2,045	 & Militär användning              &                                           \\
+1,85--2,045	 & Fast radio                      &                                           \\
+1,85--2,045	 & Sjöfartsradio                   &                                           \\
+1,85--2	 	 & \textbf{Amatörradio}                     & Undantag från tillståndsplikt (Max 10 W)  \\
+1,85--2,045	 & Landmobil radio                 &                                           \\
+2,045--2,16	 & Militär användning              & GE85M                                     \\
+2,045--2,16	 & Sjöfartsradio                   & GE85M                                     \\
+2,16--2,1735	 & Militär användning              &                                           \\	 
+2,16--2,17	 & Radiolokalisering               &                                           \\	 
+2,17--2,1735	 & Sjöfartsradio                   &                                           \\
+2,1735--2,1905	 & Sjöfartsradio                   & Internationella nöd- och anropsfrekvenser \\
+                 &                                 & 2182 kHz (telefoni) och 2187,5 kHz (DSC)  \\
+2,1905--2,498	 & Militär användning              &                                           \\	 
+2,1905--2,498	 & Sjöfartsradio                   &                                           \\
+2,194--2,498	 & Fast radio                      &                                           \\
+2,194--2,498	 & Landmobil radio                 &                                           \\	 
+2,498--2,502	 & Standardfrekvens och tidssignal &                                           \\
+2,502--2,85	 & Militär användning              &                                           \\
+2,502--2,625	 & Fast radio                      &                                           \\
+2,502--2,85	 & Sjöfartsradio                   &                                           \\
+2,502--2,625	 & Landmobil radio                 &                                           \\	 
+2,625--2,65	 & Radionavigering för sjöfart     &                                           \\
+2,65--2,85	 & Fast radio                      &                                           \\
+2,65--2,85	 & Landmobil radio                 &                                           \\	 
+\end{longtable}
+
 \subsection{PTS Bandplan för HF, 3-30 MHz}
 \begin{longtable}{lll}
 \textbf{Frekvens} & \textbf{Användning}              & \textbf{Anmärkning}             \\ \hline \endhead
@@ -398,4 +474,5 @@ Alla frekvenser i kHz, bandbredder i Hz.
 26,99--27,2       & Trådlösa barnvaktssystem         & Undantag från tillståndsplikt   \\
 28--29,7          & \textbf{Amatörradio}             & \textbf{10-metersbandet}        \\
 \end{longtable}
+\normalsize
 \end{landscape}
