--- a/body-hf.tex
+++ b/body-hf.tex
@@ -35,6 +35,8 @@ Det finns flera olika typer av fyrar men för HF är IBP (International Beacon P
 
 Fyrarna har gemensam hårdvara och synkroniseras mot tidsreferens. Fyrar kan vara offline av olika skäl, kontrollera mot IBP:s hemsida om du inte hör en fyr du brukar höra, den kan vara off line.
 
+
+\subsubsection{Lista över IBP-fyrar}
 \begin{tabular}{llrrrrr}
 \textbf{Signal} & \textbf{QTH} & \textbf{14 100} & \textbf{18 110} & \textbf{21 150} & \textbf{24 930} & \textbf{28 200} \\ \hline
 
