Bröt ut en separat fil med bandplaner enbart

--- a/bandplan-hf.tex
+++ b/bandplan-hf.tex
@@ -1,3 +1,5 @@
+\begin{landscape}
+\section{Frekvenser Amatörradio LF/MF/HF}
 \subsection{Bandplaner LF/MF/HF}
 Alla frekvenser i kHz, bandbredder i Hz.
 
@@ -137,4 +139,6 @@ Alla frekvenser i kHz, bandbredder i Hz.
        &        &      &            & FM simplex repeater 29 610                             \\ \hline
 29 620 & 29 700 & 6000 & Alla moder & FM Repeater ut RH1--8, 100 kHz duplex                  \\ \hline
 \end{tabular}
+\end{landscape}
+
 \clearpage
