--- a/repeatrar-vhf.tex
+++ b/repeatrar-vhf.tex
@@ -1,5 +1,5 @@
-\subsection{Repeatrar, länkar och fyrar VHF/UHF}
 \begin{landscape}
+\subsection{Repeatrar, länkar och fyrar VHF/UHF}
 \subsubsection{Svenska fyrar VHF/UHF}
 \begin{longtable}{rlrllrrrc}
 \textbf{Signal} & \textbf{QTH}  & \textbf{Frekvens} & \textbf{Status} & \textbf{Lokator} & 
@@ -566,3 +566,6 @@ Repeater & D-Star & SK7HW-B  & Växjö               & 434.7000  & -2MHz   & DV 
 
 \end{longtable}
 \normalsize
+
+\end{landscape}
+
