Fixade några mindre problem

--- a/bandplan-vhfuhf.tex
+++ b/bandplan-vhfuhf.tex
@@ -17,9 +17,8 @@
 50.500 & 52.000 & 12 kHz  & Alla moder  & SSTV 50.510, RTTY 50.600, FM 51.510                          \\ \hline
 51.810 & 51.990 & 12 kHz  & FM Repeater & Repeater ut, 20/10 kHz kanalavstånd                          \\
        &        &         &             & RF81 – RF99                                                  \\ \hline
-
 \end{tabular}
-\clearpage
+
 \subsubsection{Bandplan 2m 144--146 MHz}
 \begin{tabular}{rrrll}
 
@@ -49,34 +48,34 @@
          &           &         &              & RV46–RV63, 12.5 kHz kanalavstånd        \\ \hline
 145.794  & 145.806   & 12 kHz  & FM Rymd      & 145.800, 145.200 dplx m. bem. rymdfark. \\ \hline
 145.806  & 146.000   & 12 kHz  & All mode     & Exklusivt satellit                      \\ \hline
-
 \end{tabular}
-\clearpage
+
 \subsubsection{Bandplan 70cm 432--438 MHz}
 \begin{tabular}{rrrll}
-	\textbf{Frekvens}         &               & \textbf{BW} & \textbf{Trafik} & \textbf{Anmärkning}                                          \\ \hline
-	         432.0000         & 432.0250      & 500 Hz      & CW              & EME exklusivt.                                               \\ \hline
-	         432.0250         & 432.1000      & 500 Hz      & CW, PSK31       & CW mellan 432.000--085, \textbf{CW anrop 432.050}            \\
-                                  &               &             &                 & PSK31 432.088                                                \\ \hline
-	         432.1000         & 432.3990      & 2.7 kHz     & CW, SSB, MGM    & \textbf{SSB anrop 432.200}                                   \\
-                                  &               &             &                 & Mikrovåg talkback 432.350, FSK441 432.370                    \\ \hline
-	         432.4000         & 432.4900      & 500 Hz      & Fyr             & Exklusivt segment för fyrar                                  \\ \hline
-	         432.5000         & 432.5940      & 12 kHz      & All mode        & Linjära transpondrar IN 432.500--600                         \\ \hline
-	         432.5000         & 432.5750      & 12 kHz      & All mode        & NRAU Digital rep. in 432.500--575 2 MHz skift                \\ \hline
-	         432.5940         & 432.9940      & 12 kHz      & All mode        & Linjära transpondrar ut 432.600--800                         \\ \hline
-	         432.5940         & 432.9940      & 12 kHz      & FM              & Rep. in 432.600--975 RU368--398 2 MHz skift                  \\ \hline
-	         432.9940         & 433.3810      & 12 kHz      & FM              & Rep. in 433.000--375 RU368--398 1.6 MHz skift                \\ \hline
-	         433.3940         & 433.5810      & 12 kHz      & FM              & SSTV (FM/AFSK) 433.400                                       \\
-                                  &               &             &                 & FM simplex U272--286 \textbf{anrop 433.500}                  \\ \hline
-	         433.6000         & 434.0000      & 20 kHz      & All mode        & RTTY (FM/AFSK) 433.600                                       \\
-                                  &               &             &                 & FAX 433.700, APRS 433.800                                    \\ \hline
-	         434.0000         & 434.4940      & 20 kHz      & All mode        & NRAU Dig. kanaler 433.450, 434.475                           \\ \hline
-	    $^1$ 434.5000         & $^1$ 434.5940 & 20 kHz      & All mode        & NRAU Dig. rep. ut 434.500--575, 2 MHz skift                  \\ \hline
-	         434.5940         & 434.9810      & 12 kHz      & FM              & NRAU Rep. ut 434.600--975 RU 368--RU398                      \\
-                                  &               &             &                 & 12,5 kHz med 2 MHz skift                                     \\ \hline
-	          435.000         & 438.000       & 20 kHz      & All mode        & Exklusivt satellit
+	\textbf{Frekvens} &          & \textbf{BW} & \textbf{Trafik} & \textbf{Anmärkning}                               \\ \hline
+
+432.0000 & 432.0250 & 500 Hz  & CW           & EME exklusivt.                                    \\ \hline
+432.0250 & 432.1000 & 500 Hz  & CW, PSK31    & CW mellan 432.000--085, \textbf{CW anrop 432.050} \\
+         &          &         &              & PSK31 432.088                                     \\ \hline
+432.1000 & 432.3990 & 2.7 kHz & CW, SSB, MGM & \textbf{SSB anrop 432.200}                        \\
+         &          &         &              & Mikrovåg talkback 432.350, FSK441 432.370         \\ \hline
+432.4000 & 432.4900 & 500 Hz  & Fyr          & Exklusivt segment för fyrar                       \\ \hline
+432.5000 & 432.5940 & 12 kHz  & All mode     & Linjära transpondrar IN 432.500--600              \\ \hline
+432.5000 & 432.5750 & 12 kHz  & All mode     & NRAU Digital rep. in 432.500--575 2 MHz skift     \\ \hline
+432.5940 & 432.9940 & 12 kHz  & All mode     & Linjära transpondrar ut 432.600--800              \\ \hline
+432.5940 & 432.9940 & 12 kHz  & FM           & Rep. in 432.600--975 RU368--398 2 MHz skift       \\ \hline
+432.9940 & 433.3810 & 12 kHz  & FM           & Rep. in 433.000--375 RU368--398 1.6 MHz skift     \\ \hline
+433.3940 & 433.5810 & 12 kHz  & FM           & SSTV (FM/AFSK) 433.400                            \\
+         &          &         &              & FM simplex U272--286 \textbf{anrop 433.500}       \\ \hline
+433.6000 & 434.0000 & 20 kHz  & All mode     & RTTY (FM/AFSK) 433.600                            \\
+         &          &         &              & FAX 433.700, APRS 433.800                         \\ \hline
+434.0000 & 434.4940 & 20 kHz  & All mode     & NRAU Dig. kanaler 433.450, 434.475                \\ \hline
+434.5000 & 434.5940 & 20 kHz  & All mode     & NRAU Dig. rep. ut 434.500--575, 2 MHz skift       \\ \hline
+434.5940 & 434.9810 & 12 kHz  & FM           & NRAU Rep. ut 434.600--975 RU 368--RU398           \\
+         &          &         &              & 12,5 kHz med 2 MHz skift                          \\ \hline
+435.000  & 438.000  & 20 kHz  & All mode     & Exklusivt satellit\\
 \end{tabular}
-%\clearpage
+
 \subsubsection{Bandplan 23cm 1240--1300 MHz}
 \begin{tabular}{rrrll}
 	\textbf{Frekvens}         &               & \textbf{BW} & \textbf{Trafik} & \textbf{Anmärkning}                                          \\ \hline
@@ -107,3 +106,5 @@
 	         1299.750         & 1300.000      & 20 kHz      & Alla moder      & 8 st FM/DV 25 kHz kan. 1299.775--1299.975
 \end{tabular}
 \end{landscape}
+\clearpage
+
